---
source: src/expr-derive-impl/src/lib.rs
expression: "#[sqlfunc(test = true)]\nfn unary_fn<'a>(a: Datum<'a>, b: u16, temp_storage: &RowArena) -> bool {\n    unimplemented!()\n}\n"
---
#[derive(
    Ord,
    PartialOrd,
    Clone,
    Debug,
    Eq,
    PartialEq,
    serde::Serialize,
    serde::Deserialize,
    Hash,
)]
#[cfg_attr(any(test, feature = "proptest"), derive(proptest_derive::Arbitrary))]
pub struct UnaryFn;
impl crate::func::binary::EagerBinaryFunc for UnaryFn {
    type Input<'a> = (Datum<'a>, u16);
    type Output<'a> = bool;
    fn call<'a>(
        &self,
        (a, b): Self::Input<'a>,
        temp_storage: &'a mz_repr::RowArena,
    ) -> Self::Output<'a> {
        unary_fn(a, b, temp_storage)
    }
    fn output_sql_type(
        &self,
        input_types: &[mz_repr::SqlColumnType],
    ) -> mz_repr::SqlColumnType {
        use mz_repr::AsColumnType;
        let output = Self::Output::as_column_type();
        let propagates_nulls = crate::func::binary::EagerBinaryFunc::propagates_nulls(
            self,
        );
        let nullable = output.nullable;
        let non_nullable_input_is_nullable = false
            || input_types.get(1usize).map_or(false, |t| t.nullable);
        let inputs_nullable = input_types.iter().any(|it| it.nullable);
        let is_null = nullable || non_nullable_input_is_nullable
            || (propagates_nulls && inputs_nullable);
        output.nullable(is_null)
    }
}
impl std::fmt::Display for UnaryFn {
    fn fmt(&self, f: &mut std::fmt::Formatter) -> std::fmt::Result {
        f.write_str(stringify!(unary_fn))
    }
}
impl crate::func::FuncName for UnaryFn {
    const NAME: &'static str = stringify!(unary_fn);
    const SQLFUNC: Option<crate::func::SqlFuncSource> = Some(crate::func::SqlFuncSource {
        decl: "#[sqlfunc(test = true)] fn unary_fn<'a>(a: Datum<'a>, b: u16, temp_storage: &RowArena) -> bool",
        body_fingerprint: 4726381389472009124u64,
    });
}
fn unary_fn<'a>(a: Datum<'a>, b: u16, temp_storage: &RowArena) -> bool {
    unimplemented!()
}
